# my-homework

./: .gitignore  CMakeLists.txt  README.md  argument.cpp  argument.h  constants.cpp  constants.h  container.hpp  file_storage.cpp  file_storage.h  game.cpp  game.h  hello_world.cpp  list.hpp  main.cpp  move_me_out.cpp  move_me_out.h  ptr_list.hpp  statistics.cpp  user_input.cpp  user_input.h
include/: add.h  average.h  div.h  lexer.hpp  max.h  min.h  mul.h  pct.h  pct90.h  pct95.h  statistic_base.h  statistics.h  std.h  sub.h  variable.h
src/: add.h  average.cpp  brace.h  div.h  lexer.cpp  main.cpp  max.cpp  min.cpp  parser.cpp  pct.cpp  pct90.cpp  pct95.cpp  statistic_base.cpp  statistics.cpp  std.cpp  sub.h  variable.h
